--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -45,6 +47,10 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 
 
 }
